# eigen_graphics

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: eigen.cmake  fetch_content.cmake
examples/: test.cpp
include/eigen_graphics/: all.h  test.h
